--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="card">
+        <img src="https://www.shutterstock.com/shutterstock/photos/485506288/display_1500/stock-photo-tree-of-love-in-autumn-red-heart-shaped-tree-at-sunset-autumn-season-concept-beautiful-landscape-485506288.jpg" alt="Heart Tree" class="card-img">
+        <h1 class="card-title">Pricing Card</h1>
+        <p class="card-price">Price: Rs.200</p>
+        <p class="card-description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button class="buy-btn">Buy Now</button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
